# sengoku_starter_v1_1

./: .coverage  .gitignore  .pre-commit-config.yaml  =0.23  AI_ONBOARDING.md  BUGS.md  BUG_REPORT.md  BUG_REPORT_DETAILED.md  BUG_REPORT_EXHAUSTIVE.md  CHANGELOG.md  CLAUDE.md  ClaudeCloud.md  DEBUGGING_MASTER_INDEX.md  DEBUGGING_VERIFICATION.md  DOCUMENTS_INDEX.md  ELITE_DEBUGGER_FIXES.md  FIX_SUMMARY_REPORT.md  Home.md  MASTERCLASS_DEBUGGER_REPORT.md  MASTER_CHECKLIST.md  PRECOMMIT_REPORT.md  README.md  RELEASE_NOTES.md  Rebuild1.md  Rebuild2.md  STASHED_WORK.md  TECH_LEAD_FINAL_REPORT.md  TESTING.md  TEST_COVERAGE_EXPANSION.md  TWS_CONNECTION_REPORT.md  TWS_CONNECTION_SETTINGS.md  ULTIMATE_FIXES_REPORT.md  combine.md  dev_positions.py  pyproject.toml  requirements.txt  simulate_trading.py  start-dev.sh  test_elite_fixes.py  test_full_system.sh  (+3 more)
.github/workflows/: nightly-smoke.yml
WORKORDERS/: WO-ACC-01.md  WO-ALERT-01.md  WO-BF-ASCII-01.md  WO-BF-UI-GLUE.md  WO-BUD-01.md  WO-IBKR-TESTS.md  WO-RECON-01.md  WO-RECON-02.md  WO-SAFE-LEAKS.md  WO-SCH-01.md  WO-SET-01.md  WO-SUPPLY-01.md  WO-UI-WEB-01.md
config/: settings.defaults.yaml
config/examples/: features.yaml  live_profiles.yaml  profiles.yaml
docs/: ALERTS_GATING.md  API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  CI_NIGHTLY.md  COMMAND_ROOM.md  COMPATIBILITY_AUDIT.md  CUT_SCOPE_DECISIONS.md  DEPENDENCY_MAINTENANCE.md  ERROR_CODES.md  FUTURE_EXPANSION.md  GIT_AND_DOCUMENTATION.md  IBKR_PERFORMANCE_TESTING.md  OPERATIONS_RUNBOOK.md  PERFORMANCE_BASELINES.md  PROJECT_SNAPSHOT.md  README.md  RECON_ALERTS_SUPPLY.md  RECON_SCHEMA.md  RELEASING.md  SCHEMA_RECON.md  TROUBLESHOOTING.md  UI_FASTAPI_PROTOTYPE.md  bug_1_unbounded_error_fix.md  bug_22_false_concurrency_testing_fix.md  bug_30_log_rotation_race_fix.md  bug_31_config_file_error_handling_fix.md  bug_32_dangerous_advice_fix.md  bug_33_risk_adjusted_score_fix.md  bug_34_type_consistency_fix.md  bug_35_dependency_fix.md  bug_36_decimal_precision_fix.md  bug_39_configurable_risk_thresholds_fix.md  bug_40_yaml_rce_security_fix.md  bug_41_insecure_file_permissions_fix.md  bug_7_thundering_herd_fix.md  bugs_27_28_scan_engine_fixes.md  coverage_roadmap_progress.md  legacy_shim_debt.md  recovery_plan.md  (+5 more)
docs/SCHEMA/: recon.schema.json
docs/gemini/: BUILD0.md  BUILD2.md  Build 1.md  Empire1.md  README.md
docs/monitoring/: legacy_logger_alert.md
ops/systemd/: README.md  check-legacy-logger.service  check-legacy-logger.timer
optipanel/: app.py  config.py  json_utils.py  settings.py
optipanel/acceptance/: engine.py
optipanel/alerts/: __init__.py  engine.py
optipanel/api/: __init__.py  app.py
optipanel/battlefield/: __init__.py  ascii.py  engine.py  supply.py  units_v2.py
optipanel/chips/: __init__.py  adapters.py  aggregate.py  compute.py  daily.py  h60.py  lib.py  m15.py  micro.py  prob_tf.py  runtime.py
optipanel/cli/: __init__.py  config.py  live_positions.py  main.py
optipanel/config/: __init__.py  loader.py  models.py
optipanel/engine/: __init__.py  aggregate.py  scan.py
optipanel/indicators/: intra.py
optipanel/models/: alert.py  market_data.py
optipanel/monitoring/: __init__.py  health_monitor.py  pacing.py
optipanel/notify/: __init__.py  engine.py  utils.py
optipanel/obs/: __init__.py  metrics.py
optipanel/ops/: __init__.py  dependency_guard.py  eventlog.py  health.py  ops_loop.py  ops_loop_enhanced.py  session_logger.py  session_logger_safe.py
optipanel/perf/: __init__.py  latency_probe.py  runtime_checks.py
optipanel/positions/: __init__.py  model.py
optipanel/prob/: chips.py
optipanel/probs/: __init__.py  core.py  spec.py
optipanel/readiness/: __init__.py  engine.py
optipanel/recon/: enrich.py  gating.py  readiness.py  schemas.py
optipanel/runtime/: driver.py  health.py  loop.py  profiles.py  profiles_live.py  scheduler.py  watchdog.py
optipanel/security/: __init__.py  secrets.py
optipanel/services/: budget.py  cache.py  leakguard.py  ratelimit.py  (+1 more)
optipanel_sengoku.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
samples/: command_room_golden.txt  command_room_golden_v0_7_0.txt  health_golden_v0_7_0.json  recon_json_golden_v0_7_0.json  recon_pretty_golden_v0_7_0.txt  session_sample.json
scripts/: capture_latency_baseline.py  check_dependency_compatibility.py  check_legacy_logger_usage.py  checks.sh  comprehensive_benchmark.py  demo_bug_1_fix.py  demo_bug_24_fix.py  demo_bug_30_fix.py  demo_bug_31_fix.py  demo_bug_32_fix.py  demo_bug_36_decimal_fix.py  demo_bug_38_fix.py  demo_bug_39_fix.py  demo_bug_41_file_permissions.py  demo_bug_8_fix.py  eventlog_demo.py  git-session.sh  ibkr_performance_monitor.py  ibkr_stress_test.py  ibkr_stress_test_demo.py  live_demo.py  live_sanity.sh  nightly_dependency_smoke.sh  release.sh  render_panels.py  run_live_demo.sh  session_logger_demo.py  test_logger_safety.py  verify_runtime_speedups.py
tests/: conftest.py  test_acceptance_engine.py  test_aggregate.py  test_alerts.py  test_alerts_gating.py  test_alerts_supply.py  test_api_app.py  test_app_main.py  test_app_smoke.py  test_battlefield_ascii_v2.py  test_battlefield_engine_units.py  test_battlefield_v2.py  test_bf_ascii.py  test_budget.py  test_bug_1_error_accumulation.py  test_bug_24_eventlogger_durability.py  test_bug_27_scan_advice_validation.py  test_bug_29_redundant_sort.py  test_bug_30_log_rotation_race.py  test_bug_31_config_file_error_handling.py  test_bug_32_advice_logic.py  test_bug_33_risk_adjusted_score.py  test_bug_34_type_consistency.py  test_bug_35_dependency_fix.py  test_bug_36_decimal_precision.py  test_bug_38_edge_cases.py  test_bug_39_configurable_thresholds.py  test_bug_40_yaml_rce_security.py  test_bug_41_file_permissions.py  test_bug_43_tws_error_codes.py  test_bug_44_thread_safety.py  test_bug_47_decimal_validation.py  test_bug_4_ref_symbol_fetch.py  test_bug_57_cache_settings.py  test_bug_63_type_coercion.py  test_bug_64_deepcopy.py  test_bug_8_deep_copy_fix.py  test_bug_8_shallow_copy.py  test_bug_91_timestamp_overflow.py  test_bug_92_type_conversion.py  (+88 more)
(+37 files in other folders)
